...
            padding: EdgeInsets.symmetric(vertical: 16),
            decoration: BoxDecoration(
              borderRadius: BorderRadius.all(Radius.circular(32),),
              color: Colors.black,
            ),
            child: Text(
              key: const Key('login_btn'),
              LocaleKeys.login_resources_login_button_text.tr(),
              style: TextStyle(
                fontSize: 16,
                fontWeight: FontWeight.bold,
                color: Colors.white,
              ),
...
